src/test/resources/typeSystemTestModels/invalid/interfaces/InterfaceNoDuplicateModifier.java
package typeSystemTestModels.invalid.interfaces;

public public interface InterfaceNoDuplicateModifier {

  private private interface A {

  }
}